--- a/templates/tickets/create.html
+++ b/templates/tickets/create.html
@@ -23,8 +23,8 @@
 
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label class="form-label">Categoria</label>
-                            <select name="categoria_id" class="form-select">
+                            <label class="form-label">Categoria *</label>
+                            <select name="categoria_id" class="form-select" required>
                                 <option value="">Selecione...</option>
                                 {% for categoria in categorias %}
                                 <option value="{{ categoria.id }}">{{ categoria.nome }}</option>
